--- a/tex/results/preface.tex.erb
+++ b/tex/results/preface.tex.erb
@@ -14,9 +14,9 @@
 \chapter{<%=t :preface%>}
 
 <%
-preface = File.join(Rails.root, "../tex/preface_#{I18n.locale}.tex")
+preface = File.join(RAILS_ROOT, "tex/preface_#{I18n.locale}.tex")
 unless File.exists?(preface)
-  preface = File.join(Rails.root, "../tex/preface.tex")
+  preface = File.join(RAILS_ROOT, "/preface.tex")
   puts "WARNING: Missing preface_#{I18n.locale}.tex"
 end
 %>
