--- a/tex/results/preamble.tex.erb
+++ b/tex/results/preamble.tex.erb
@@ -100,7 +100,7 @@ end
 
 
 % FIXME: these should be in a separate tex.erb
-\newcommand{\kurskopf}[5]{\clearpage\pdfdest name{#4} xyz%
+\newcommand{\kurskopf}[5]{\clearpage\pdfdest %name{#4} xyz%
   \chapter{#1 #5 #2}}
 
 
