Minor fixes, fixing tutor.rake

--- a/tex/results/preamble.tex.erb
+++ b/tex/results/preamble.tex.erb
@@ -27,7 +27,7 @@ end
 \usepackage{color}
 \usepackage{calc}
 \usepackage{dsfont}                   % additional math font
-\usepackage[T1]{fontenc}
+\usepackage{fontspec}
 \usepackage{graphicx}
 \usepackage{lmodern}                  % tug.dk/FontCatalogue/lmodern
 \usepackage{longtable}                % so tutor tables may page break
