updating eval.cls

--- a/tex/results/preamble.tex.erb
+++ b/tex/results/preamble.tex.erb
@@ -107,7 +107,7 @@ end
 
 
 % FIXME: these should be in a separate tex.erb
-\newcommand{\kurskopf}[5]{\clearpage\pdfdest name{#4} xyz%
+\newcommand{\kurskopf}[5]{\clearpage
   \chapter{#1 #5 #2}}
 
 
